src/test/resources/crux/stages/type-check/test20.crx

// test division 


void main() {
   int five;
   int sum;
   five = 100-600;
   sum = five / 100;
   printInt(sum);
   println();
}
